buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id 'idea'
    id 'java'
    id 'org.springframework.boot' version '2.6.3'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
}

group 'com.github.neukrang'
version '1.0-SNAPSHOT'
sourceCompatibility = 17

repositories {
    mavenCentral()
    maven {
        name 'm2-dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }
}

dependencies {
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-aop")
    implementation("org.projectlombok:lombok")
    implementation("net.dv8tion:JDA:4.2.1_253")
    implementation("com.sedmelluq:lavaplayer:1.3.77")
    implementation("org.jsoup:jsoup:1.13.1")
    implementation("com.google.api-client:google-api-client:1.31.5")
    implementation("com.google.apis:google-api-services-youtube:v3-rev222-1.25.0")
    implementation("com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4")

    testImplementation("org.springframework.boot:spring-boot-starter-test")
    testImplementation("org.projectlombok:lombok")

    annotationProcessor("org.projectlombok:lombok")
    testAnnotationProcessor("org.projectlombok:lombok")
}

test {
    useJUnitPlatform()
}